# docloom

./: .dockerignore  .gitattributes  .gitignore  PROJECT.md  README.md  compass_artifact_wf-1a26c084-2786-4011-ac47-f49e4e49ffb8_text_markdown.md  studio.cmd  studio.ps1  studio.sh
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
atom_strata_deliverables/: .gitignore  build.py
docloom/: .gitignore  LICENSE  README.md  pyproject.toml
docloom-studio/: .gitignore  Dockerfile  README.md  healthcare_claude.pptx  pyproject.toml
docloom-studio/scripts/: _seed_common.py  claude_healthcare_deck.py  fetch-drawio.ps1  fetch-drawio.sh  seed_assets.py  seed_diagram.py  seed_docsheet.py  seed_infographic.py  seed_showcase.py  seed_sources.py
docloom-studio/server/docloom_studio/: __init__.py  artifacts.py  assets.py  auth.py  chat.py  crypto.py  db.py  embeddings.py  generate.py  ingest.py  irx.py  jobs.py  main.py  notebooks.py  providers.py  research.py  settings.py  sources.py  tts.py
docloom-studio/server/docloom_studio/themes/: aurora.json  editorial.json  paper.json  pulse.json  slate.json  terra.json
docloom-studio/tests/: conftest.py  test_artifact_save_race.py  test_assets.py  test_audit_generation_fixes.py  test_auth.py  test_db_backend.py  test_deck_diagram_block.py  test_deck_empty_slide.py  test_deck_slide_budget.py  test_hardening.py  test_ingest_breadth.py  test_ingest_parsers.py  test_jobs_reconcile.py  test_notebook.py  test_pipeline.py  test_pipeline_quality.py  test_reaudit_assets_upload.py  test_reaudit_db.py  test_reaudit_ingest_unicode.py  test_reaudit_irx_theme.py  test_reaudit_settings.py  test_reaudit_sources_upload.py  test_retrieval.py  test_secrets_crypto.py  test_security.py  test_stageA_generate.py  test_stageA_providers.py  test_stageA_settings.py  test_stageB_assets.py  test_stageB_generate.py  test_stageB_providers_image.py  test_stageB_settings_image.py  test_stageC_generate.py  test_ultracode_assets.py  test_ultracode_auth.py  test_ultracode_db_jobs.py  test_ultracode_diagram_ir_routes.py  test_ultracode_drawio_seed.py  test_ultracode_generate.py  test_ultracode_ingest.py  (+2 more)
docloom-studio/web/: DESIGN.md  editor_test.mjs  index.html  package-lock.json  package.json  shoot.mjs  shoot_assets.mjs  shoot_claude.mjs  shoot_diagram.mjs  shoot_docsheet.mjs  shoot_ig.mjs  vite.config.ts
docloom-studio/web/scripts/: check-type-scale.mjs
docloom-studio/web/src/: App.tsx  index.css  main.tsx  tokens.css
docloom-studio/web/src/api/: client.ts
docloom-studio/web/src/auth/: AuthContext.tsx  AuthGate.tsx  LoginScreen.tsx
docloom-studio/web/src/deck/: BuildView.tsx  CiteMark.ts  DeckStage.tsx  Editable.tsx  EditableBlock.tsx  EditableSlide.tsx  Inspector.tsx  PresentMode.tsx  RichBlockEditor.tsx  RichText.tsx  SlideRail.tsx  WeaveProgress.tsx  blocks.test.ts  blocks.tsx  buildProgress.test.ts  buildProgress.ts  deckStore.ts  editor.css  serialize.test.ts  serialize.ts  stage.css  types.ts  ultracode.test.ts  ultracodeUi.test.ts  useThemes.ts  weave.css
docloom-studio/web/src/diagram/: d2.ts  irScene.test.ts  irScene.ts  mermaid.ts
docloom-studio/web/src/doc/: docStore.ts
docloom-studio/web/src/notebook/: ArtifactsPanel.tsx  ChatPanel.tsx  SourceReader.tsx  SourcesPanel.tsx
docloom-studio/web/src/screens/: AssetLibrary.tsx  DeckEditor.tsx  DiagramEditor.tsx  DiagramIRCanvas.tsx  DocEditor.tsx  DrawioCanvas.test.ts  DrawioCanvas.tsx  InfographicEditor.tsx  NotebookWorkspace.tsx  NotebooksList.tsx  PodcastEditor.tsx  Settings.tsx  SheetEditor.tsx  doc.css  ultracode.test.ts
docloom-studio/web/src/ui/: Button.tsx  Empty.tsx  Eyebrow.tsx  Field.tsx  IconButton.tsx  Input.tsx  Panel.tsx  SourceMark.tsx  index.ts  toast.tsx
docloom/.github/workflows/: test.yml
docloom/examples/: generate_with_llm.py  quarterly_report.json  webui.py
docloom/examples/out_ui/run-034845/: q2-2026-business-review.html
docloom/examples/out_ui/run-035608/: async-standups-vs-meetings.html  async-standups-vs-meetings.md
docloom/examples/out_ui/run-035617/: q2-2026-business-review.html
docloom/examples/out_ui/run-035627/: q2-2026-business-review.md
docloom/src/docloom/: __init__.py  cli.py  ir.py  lint.py  llm.py  mcp_server.py  theme.py
docloom/src/docloom/render/: __init__.py  chart_svg.py  diagram_dot.py  diagram_pptx.py  diagram_svg.py  docx.py  drawio.py  html.py  markdown.py  pptx.py  qa.py  raster.py  textfit.py  typst.py  xlsx.py
docloom/tests/: test_brand_assets.py  test_cli_diagram_sources.py  test_core_quality.py  test_diagram_pptx.py  test_diagram_renderers.py  test_diagram_solve.py  test_docloom.py  test_dot_layout.py  test_drawio.py  test_ir_diagram.py  test_pptx_invariants.py  test_pptx_layout.py  test_pptx_logo.py  test_public_api.py  test_raster.py  test_reaudit_chart_svg.py  test_reaudit_docx.py  test_reaudit_lint.py  test_reaudit_llm.py  test_reaudit_markdown.py  test_reaudit_pptx.py  test_reaudit_typst.py  test_regressions.py  test_render_quality.py  test_robustness.py  test_stageA_engine_lint.py  test_stageB_pptx_logo.py  test_stageB_renderers_logo.py  test_textfit.py  test_ultracode_chart_xlsx.py  test_ultracode_diagram_emit.py  test_ultracode_diagram_solve.py  test_ultracode_docx_typst.py  test_ultracode_html_md.py  test_ultracode_ir_theme.py  test_ultracode_lint.py  test_ultracode_llm_cli.py  test_ultracode_pptx.py  test_v02.py
docs/: PRODUCTION_ROADMAP.md  archify-evaluation.md  architecture.diagram.json  diagram-bakeoff.md  diagram-plan.md  diagram-status.md
examples/: README.md  all_formats.py  branded_theme.py  document.py  presentation.py  showcase.py  showcase_sections.json  spreadsheet.py
examples/diagrams/: architecture.d2  mindmap.d2
examples/dogfood/: README.md  architecture-full.json  architecture.json  deck.json  infographic.json  render_samples.py  whitepaper.json  workbook.json
examples/output/: branded.pptx  budget.xlsx  overview.docx  overview.html  overview.pptx  overview.xlsx  presentation.pptx  report.docx  report.html  showcase.docx  (+3 more)
strata_deliverables/: .gitignore  build_strata.py
(+8 files in other folders)
