[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docloom-studio"
version = "0.1.0"
description = "Free, local-first AI document studio: notebooks with your sources or agent research, generating editable presentations, documents, diagrams, and infographics — exported through docloom to real PPTX/DOCX/XLSX/PDF."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "docloom contributors" }]
keywords = [
    "ai", "llm", "notebooklm", "presentations", "documents", "diagrams",
    "infographics", "local-first", "self-hosted", "ollama",
]
dependencies = [
    "docloom[pdf]>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "numpy>=1.26",
    "pdfplumber>=0.11",
    "pypdf>=5",
    "ddgs>=9",
    "trafilatura>=2.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "charset-normalizer>=3.3",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
# Local podcast voices. First synthesis downloads the Kokoro model (~few hundred MB).
podcast = ["kokoro>=0.9", "soundfile>=0.12"]
# Postgres backend for multi-node deployments (set DOCLOOM_DB_URL). SQLite,
# the default, needs nothing extra.
postgres = ["psycopg[binary]>=3.1"]
# Extra source formats: EPUB books and YouTube transcripts.
ingest = ["ebooklib>=0.18", "youtube-transcript-api>=0.6"]

[project.scripts]
docloom-studio = "docloom_studio.main:run"

[tool.hatch.build.targets.wheel]
packages = ["server/docloom_studio"]

# Release wheels bundle the built SPA. Build the frontend first, then copy
# web/dist into server/docloom_studio/webdist before `uv build`.
# (Dev never needs this: main.py falls back to the repo's web/dist.)
