[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docloom"
version = "0.2.0"
description = "The document output layer for AI apps: your LLM emits a validated JSON schema, docloom deterministically renders PPTX, DOCX, XLSX, PDF, and HTML — with a linter that catches broken slides before anyone sees them."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "docloom contributors" }]
keywords = [
    "llm", "ai", "structured-output", "document-generation",
    "pptx", "docx", "xlsx", "pdf", "typst", "presentations", "reports",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "pydantic>=2.7",
    "python-pptx>=1.0",
    "python-docx>=1.1",
    "xlsxwriter>=3.2",
]

[project.optional-dependencies]
pdf = ["typst>=0.13"]
mcp = ["mcp>=1.2"]
dev = ["pytest>=8"]

[project.scripts]
docloom = "docloom.cli:main"
docloom-mcp = "docloom.mcp_server:main"

[project.urls]
Homepage = "https://github.com/docloom/docloom"
Issues = "https://github.com/docloom/docloom/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/docloom"]
